# grow

./: .eslintignore  .gitignore  .rsw.json  .stylelintrc.json  404.html  CNAME  README.md  fix-new-urls.js  package-lock.json  package.json  postcss.config.cjs  svelte.config.cjs  svelte.config.js  tailwind.config.cjs  tsconfig.json  windi.config.ts
.github/actions/setup-node-yarn-deps/: action.yml
.github/actions/setup-rust-wasm/: action.yml
.github/workflows/: build-and-deploy.yml  lint.yml
_app/: error.svelte-27ad0e7a.js  start-f82d9633.js
_app/assets/: ACIS.76679cb0.js  FieldCard-d92f94f8.css  GeoJson-55083736.css  geo-utils_bg-1f56cca5.wasm
_app/assets/pages/: __layout.svelte-a9e2803e.css
_app/chunks/: CornIcon-26531608.js  FieldCard-b4f784dc.js  GeoJson-374c29c6.js  Header-5712565a.js  PollenIcon-b9e2ffc2.js  Variety-ab1a983c.js  Weather-186ca2b9.js  leaflet-src-2adb11db.js  vendor-b3a12ac3.js
_app/pages/: __layout.svelte-78693f3f.js  defaults.svelte-58381d9f.js  index.svelte-708a85f0.js
_app/pages/fields/: index.svelte-4ca0dbda.js  upload.svelte-aa4f4af3.js
geo-utils/: Cargo.toml  build.sh  fix-new-urls.js  package.json
geo-utils/pkg/: geo-utils.d.ts  geo-utils.js
geo-utils/src/: lib.rs
pwa/: README.md  package.json  postcss.config.cjs  svelte.config.js  tailwind.config.cjs  tsconfig.json
pwa/src/: app.html  global.css  global.d.ts
src/: app.html  global.css  worker-code.ts  worker.ts
src/lib/: FieldCard.svelte
src/routes/: $layout.svelte  __layout.svelte  defaults.svelte  index.svelte
src/stores/: weather.ts
src/workers/: ACIS.ts
(+68 files in other folders)
