[package]
name = "geo-utils"
version = "0.1.0"
authors = ["Andrew Balmos <abalmos@purdue.edu>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.6"
wee_alloc = { version = "0.4.5", optional = true }
wasm-bindgen = { version = "0.2.73", features = [ "serde-serialize" ] }
shapefile = { version = "0.2.2", features = [ "geo-types" ] }
zip = { version = "0.5.11", default-features = false, features = [ "deflate" ] }
geo-types = "0.7.1"
geojson = { version = "0.22.0", features = [ 'geo-types' ] }
serde = { version = "1.0.125", features = [ "derive" ] }
serde_json = "1.0.64"

# Remove this once things are working?
web-sys = { version = "0.3.50", features = [ "console" ] }
geo = "0.17.1"
polylabel = "2.4.0"
js-sys = "0.3.50"
serde-wasm-bindgen = "0.1.3"

[profile.release]
opt-level = "s"

[profile.dev]
opt-level = 3

# `zip` is PAINFULLY slow not optimized. Always optimize, even in debug builds.
[profile.dev.package.zip]
opt-level = 3
